# developer-docs

./: .gitignore  README.md  SUMMARY.md  mkdocs.yml  pyproject.toml
.gitbook/assets/: makefile
.github/ISSUE_TEMPLATE/: improvment_suggestion.md
.hooks/: .hash_juvix_md  juvix_modules.json
.hooks/.HTML/: test-src.html
.hooks/.MD/: test.md
advanced/: test.juvix.md
data-structures/: README.md  action.md  resource.md  transaction.md
docs/: Package.juvix  juvix.lock.yaml  test.juvix.md
further-resources/: advanced.md
further-resources/juvix/: write-a-juvix-project.md
learn/: anomas-state-model.md  overview.md  resources.md
learn/anoma-applications/: README.md  what-is-an-anoma-application.md  what-is-application-state.md
learn/anomas-state-model/: README.md  model-comparison.md
learn/applications/: README.md  backend.md  interface.md  services.md
learn/overview/: README.md  key-terms.md
learn/page/: README.md  ephemeral-resources.md  information-flow-control.md
learn/resources/: README.md  kind.md  lifecycle.md  logic.md  resource-logic.md  resource-object.md  state.md
learn/services/: README.md  indexing.md  solving.md
learn/transactions/: README.md  actions.md  balanced-transactions.md  cross-chain-transactions.md  delta.md  intents-and-solving.md  intents.md  transaction-object.md
learn/what-is-anoma/: README.md  what-is-a-resource-logic.md  what-is-a-resource.md  what-is-a-transaction.md  what-is-an-intent.md
readme/: from-vm-to-im.md
readme/test.juvix/: README.md  from-vm-to-im.md  intent-centric-dapps.md
(+135 files in other folders)
